--- a/index.html
+++ b/index.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Crypto</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&family=Poppins:wght@200;400;500&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./index.css" />
-  </head>
-  <body>
-    <nav>
-      <div id="header">
-      <a href="/index.html"><h2>CRYPTO</h2></a>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Crypto</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&family=Poppins:wght@200;400;500&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="./index.css" />
+</head>
+
+<body>
+  <nav>
+    <div id="header">
+      <a href="/index.html">
+        <h2>CRYPTO</h2>
+      </a>
       <ul class="menu">
         <li><a class="active" href="/index.html">Home</a></li>
         <li><a href="/index.html">About</a></li>
@@ -25,15 +30,34 @@
         <li><a href="/index.html">Contact</a></li>
       </ul>
       <div class="header_btn">
-      <button class="btn">Connect Wallet</button>
-      <!-- <i class="fa-solid fa-xmark" onclick="toggle()" style="color: #ffffff;"></i> -->
-      <i class="fa-solid fa-bars" onclick="toggle()" style="color: #ffffff;"></i>
+        <button class="btn">Connect Wallet</button>
+        <!-- <i class="fa-solid fa-xmark" onclick="toggle()" style="color: #ffffff;"></i> -->
+        <i class="fa-solid fa-bars" onclick="toggle()" style="color: #ffffff;"></i>
+      </div>
+  </nav>
+
+  <!-- ----banner---- -->
+  <section>
+    <div class="glowing_circle"></div>
+    <div class="glowing_circle_1"></div>
+    <div id="banner">
+      <div class="banner_content">
+        <h1>Crypto Currency</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, voluptatum.</p>
+        <div class="banner_btn">
+          <button class="btn">Get Started</button>
+          <button class="btn">Discover More</button>
+        </div>
+      </div>
+      <div class="banner_img">
+        <img src="//unsplash.it/400/400" alt="">
+      </div>
     </div>
-    </nav>
+  </section>
 
-
-    <!-- -----js file---- -->
-    <script src="./index.js"></script>
-  </body>
+  <!-- -----js file---- -->
+  <script src="./index.js"></script>
+</body>
 </div>
+
 </html>
