Added Trusted companies

--- a/index.html
+++ b/index.html
@@ -55,6 +55,38 @@
     </div>
   </section>
 
+
+  <!-- ----trusted companies---- -->
+  <section>
+    <div class="trusted">
+      <h1>Trusted Over 50k+ Companies in the world</h1>
+      <div class="trusted_brands">
+        <i class="fa-brands fa-pied-piper" style="color: #ffffff;">
+          <h3>pied-piper</h3>
+        </i>
+        <span></span><i class="fa-brands fa-stumbleupon" style="color: #ffffff;">
+          <h3>stumbleupon</h3>
+        </i>
+        <span></span><i class="fa-brands fa-joomla" style="color: #ffffff;">
+          <h3>joomla</h3>
+        </i>
+        <span></span><i class="fa-brands  fa-digg" style="color: #ffffff;">
+          <h3>digg</h3>
+        </i>
+        <span></span><i class="fa-brands  fa-drupal" style="color: #ffffff;">
+          <h3>drupal</h3>
+        </i>
+      </div>
+    </div>
+  </section>
+
+
+
+
+
+
+
+
   <!-- -----js file---- -->
   <script src="./index.js"></script>
 </body>
