nexto & innovative features section added

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
   <!-- ----trusted companies---- -->
   <section>
-    <div class="trusted">
+    <div id="trusted">
       <h1>Trusted Over 50k+ Companies in the world</h1>
       <div class="trusted_brands">
         <i class="fa-brands fa-pied-piper" style="color: #ffffff;">
@@ -79,6 +79,89 @@
       </div>
     </div>
   </section>
+
+
+  <!-- ----nexto most trusted crypto--- -->
+
+  <section>
+    <div id="nexto">
+      <div class="nexto_img">
+        <img src="//unsplash.it/400/400" alt="">
+      </div>
+      <div class="nexto_content">
+        <h1>Nexto is the most trusted
+          Cryptocurrency platform
+        </h1>
+        <p>Lorem, ipsum dolor sit Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro qui beatae ex
+          molestiae? Odit eum nesciunt sed, dicta commodi culpa. Lorem ipsum dolor sit amet consectetur adipisicing
+          elit. Perferendis provident nemo consequuntur non, ipsa in eum. Ullam dolores velit soluta.</p>
+        <button class="btn">Discover More</button>
+      </div>
+    </div>
+  </section>
+
+  <!-- ----innovative fatures--- -->
+
+  <section>
+    <div id="innovative_features">
+      <div class="innovative_content">
+        <h1>innovative Features to buy,
+          trade and invest in crypto
+        </h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, maxime?</p>
+
+      </div>
+      <div class="card">
+        <div class="card_item">
+          <span>
+            <i class="fa-solid fa-lock" style="color: #ffffff;"></i>
+          </span>
+          <h3>Safe & secure</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, odio!</p>
+        </div>
+        <div class="card_item">
+          <span>
+            <i class="fa-solid fa-lock" style="color: #ffffff;"></i>
+          </span>
+          <h3>Safe & secure</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, odio!</p>
+        </div>
+        <div class="card_item">
+          <span>
+            <i class="fa-solid fa-lock" style="color: #ffffff;"></i>
+          </span>
+          <h3>Safe & secure</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, odio!</p>
+        </div>
+        <div class="card_item card_bg">
+          <span>
+            <i class="fa-solid fa-lock" style="color: #ffffff;"></i>
+          </span>
+          <h3>Safe & secure</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, odio!</p>
+        </div>
+        <div class="card_item">
+          <span>
+            <i class="fa-solid fa-lock" style="color: #ffffff;"></i>
+          </span>
+          <h3>Safe & secure</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, odio!</p>
+        </div>
+        <div class="card_item">
+          <span>
+            <i class="fa-solid fa-lock" style="color: #ffffff;"></i>
+          </span>
+          <h3>Safe & secure</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, odio!</p>
+        </div>
+      </div>
+    </div>
+
+  </section>
+
+
+
+
 
 
 
