--- a/index.html
+++ b/index.html
@@ -156,8 +156,40 @@
         </div>
       </div>
     </div>
-
   </section>
+
+  <!-- ---crypto world--- -->
+
+  <section>
+    <div class="crypto_world">
+      <div class="crypto_world_img">
+        <div class="crypto_world_content">
+          <h2>In crypto World, We are secure & Trust Worthy</h2>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus nisi eligendi possimus excepturi
+            quaerat
+            corrupti repellendus accusamus laboriosam assumenda ad?</p>
+          <div class="crypto_world_list">
+            <div class="crypto_world_points">
+              <i class="fa-solid fa-circle-check" style="color: #ffffff;">
+              </i>
+              <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+            <div class="crypto_world_points">
+              <i class="fa-solid fa-circle-check" style="color: #ffffff;">
+              </i>
+              <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+            <div class="crypto_world_points ">
+              <i class="fa-solid fa-circle-check" style="color: #ffffff;">
+              </i>
+              <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
 
 
 
