wallet steps with accordin added

--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
   </nav>
 
   <!-- ----banner---- -->
-  <section>
-    <div class="glowing_circle"></div>
-    <div class="glowing_circle_1"></div>
+  <section class="banner_bg">
     <div id="banner">
       <div class="banner_content">
         <h1>Crypto Currency</h1>
@@ -53,6 +51,8 @@
         <img src="//unsplash.it/400/400" alt="">
       </div>
     </div>
+    <div class="banner_glow glowing_circle"></div>
+    <div class="banner_glow_1 glowing_circle_0"></div>
   </section>
 
 
@@ -102,7 +102,8 @@
 
   <!-- ----innovative fatures--- -->
 
-  <section>
+  <section class="innovative_bg">
+
     <div id="innovative_features">
       <div class="innovative_content">
         <h1>innovative Features to buy,
@@ -156,11 +157,14 @@
         </div>
       </div>
     </div>
+    <!-- ---glowing--circle--- -->
+    <div class="innovative_glow glowing_circle"></div>
+
   </section>
 
   <!-- ---crypto world--- -->
 
-  <section>
+  <section class="crypto_bg">
     <div class="crypto_world">
       <div class="crypto_world_img">
         <div class="crypto_world_content">
@@ -188,8 +192,60 @@
         </div>
       </div>
     </div>
+    <div class="crypto_glow glowing_circle"></div>
+    <div class="crypto_glow_1 glowing_circle_0 "></div>
   </section>
 
+
+  <!-- ---wallet steps--- -->
+
+  <section>
+    <div class="wallet_steps">
+      <div class="wallet_steps_img"><img src="//unsplash.it/400/400" alt=""></div>
+      <div class="wallet_steps_content">
+        <h1>Easy Steps to use fugu wallet on any device</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, fugiat.</p>
+        <!-- ---accordin--- -->
+        <div class="accordin">
+          <div class="accordin_title">
+            <h2>Create Your wallet</h2>
+            <i class="fa-solid fa-angle-down" onclick="accordin()" style="color: #ffffff;"></i>
+            <!-- <i class="fa-solid fa-angle-up" style="color: #ffffff;"></i> -->
+          </div>
+          <div class="accordin_para">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem, ipsum dolor sit amet consectetur
+              adipisicing elit. Lorem, ipsum dolor sit amet consectetur adipisicing elit. adipisicing elit. Lorem, ipsum
+
+            </p>
+          </div>
+        </div>
+        <div class="accordin">
+          <div class="accordin_title">
+            <h2>Create Your wallet</h2>
+            <i class="fa-solid fa-angle-down" style="color: #ffffff;"></i>
+            <!-- <i class="fa-solid fa-angle-up" style="color: #ffffff;"></i> -->
+          </div>
+          <div class="accordin_para">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem, ipsum dolor sit amet consectetur
+              adipisicing elit. Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
+          </div>
+        </div>
+        <div class="accordin">
+          <div class="accordin_title">
+            <h2>Create Your wallet</h2>
+            <i class="fa-solid fa-angle-down" style="color: #ffffff;"></i>
+            <!-- <i class="fa-solid fa-angle-up" style="color: #ffffff;"></i> -->
+          </div>
+          <div class="accordin_para">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem, ipsum dolor sit amet consectetur
+              adipisicing elit. Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
+          </div>
+        </div>
+
+      </div>
+    </div>
+    </div>
+  </section>
 
 
 
