changes on wallet step accordin ui color

--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
         <div class="accordin">
           <div class="accordin_title">
             <h2>Create Your wallet</h2>
-            <i class="fa-solid fa-angle-down" onclick="accordin()" style="color: #ffffff;"></i>
-            <!-- <i class="fa-solid fa-angle-up" style="color: #ffffff;"></i> -->
+            <i class="fa-solid fa-angle-down" style="color: #ffffff;"></i>
+            <i class="fa-solid fa-angle-up" style="color: #ffffff;"></i>
           </div>
           <div class="accordin_para">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem, ipsum dolor sit amet consectetur
@@ -223,7 +223,7 @@
           <div class="accordin_title">
             <h2>Create Your wallet</h2>
             <i class="fa-solid fa-angle-down" style="color: #ffffff;"></i>
-            <!-- <i class="fa-solid fa-angle-up" style="color: #ffffff;"></i> -->
+            <i class="fa-solid fa-angle-up" style="color: #ffffff;"></i>
           </div>
           <div class="accordin_para">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem, ipsum dolor sit amet consectetur
