added testimonial section

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <link rel="stylesheet" href="./index.css" />
 </head>
 
@@ -169,7 +170,8 @@
       <div class="crypto_world_img">
         <div class="crypto_world_content">
           <h2>In crypto World, We are secure & Trust Worthy</h2>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus nisi eligendi possimus excepturi
+          <p class="crypto_world_desc">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus nisi
+            eligendi possimus excepturi
             quaerat
             corrupti repellendus accusamus laboriosam assumenda ad?</p>
           <div class="crypto_world_list">
@@ -241,24 +243,132 @@
               adipisicing elit. Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
           </div>
         </div>
-
+        <button class="btn">Go To Exchange</button>
       </div>
     </div>
     </div>
   </section>
 
+  <!-- -----testimonial ----- -->
 
-
-
-
-
-
-
-
-
-
+  <section>
+    <div class="testimonial">
+      <h1>User around the world have a great experience with nexto</h1>
+      <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus, architecto.</h3>
+      <div class="card swiper">
+        <div class="card_container">
+          <div class="swiper-wrapper">
+            <div class="card_wrapper swiper-slide">
+              <div class="stars">
+                <i class="fa-solid fa-star" style="color: #e1da18;"></i>
+                <i class="fa-solid fa-star" style="color: #e1da18;"></i>
+                <i class="fa-solid fa-star" style="color: #e1da18;"></i>
+                <i class="fa-solid fa-star-half-stroke" style="color: #e1da18;"></i>
+                <i class="fa-regular fa-star" style="color: #e1da18;"></i>
+              </div>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi, natus.</p>
+              <hr>
+              <div class="card_content">
+                <div class="card_profile">
+                  <img src="//unsplash.it/200/200" alt="">
+                </div>
+                <div class="card_desc">
+                  <h3>- Karan lyan</h3>
+                  <p>ui/ux designer</p>
+                </div>
+              </div>
+            </div>
+            <div class="card_wrapper swiper-slide">
+              <div class="stars">
+                <i class="fa-solid fa-star" style="color: #e1da18;"></i>
+                <i class="fa-solid fa-star" style="color: #e1da18;"></i>
+                <i class="fa-solid fa-star" style="color: #e1da18;"></i>
+                <i class="fa-solid fa-star-half-stroke" style="color: #e1da18;"></i>
+                <i class="fa-regular fa-star" style="color: #e1da18;"></i>
+              </div>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi, natus.</p>
+              <hr>
+              <div class="card_content">
+                <div class="card_profile">
+                  <img src="//unsplash.it/200/200" alt="">
+                </div>
+                <div class="card_desc">
+                  <h3>- Karan lyan</h3>
+                  <p>ui/ux designer</p>
+                </div>
+              </div>
+            </div>
+            <div class="card_wrapper swiper-slide">
+              <div class="stars">
+                <i class="fa-solid fa-star" style="color: #e1da18;"></i>
+                <i class="fa-solid fa-star" style="color: #e1da18;"></i>
+                <i class="fa-solid fa-star" style="color: #e1da18;"></i>
+                <i class="fa-solid fa-star-half-stroke" style="color: #e1da18;"></i>
+                <i class="fa-regular fa-star" style="color: #e1da18;"></i>
+              </div>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi, natus.</p>
+              <hr>
+              <div class="card_content">
+                <div class="card_profile">
+                  <img src="//unsplash.it/200/200" alt="">
+                </div>
+                <div class="card_desc">
+                  <h3>- Karan lyan</h3>
+                  <p>ui/ux designer</p>
+                </div>
+              </div>
+            </div>
+            <div class="card_wrapper swiper-slide">
+              <div class="stars">
+                <i class="fa-solid fa-star" style="color: #e1da18;"></i>
+                <i class="fa-solid fa-star" style="color: #e1da18;"></i>
+                <i class="fa-solid fa-star" style="color: #e1da18;"></i>
+                <i class="fa-solid fa-star-half-stroke" style="color: #e1da18;"></i>
+                <i class="fa-regular fa-star" style="color: #e1da18;"></i>
+              </div>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi, natus.</p>
+              <hr>
+              <div class="card_content">
+                <div class="card_profile">
+                  <img src="//unsplash.it/200/200" alt="">
+                </div>
+                <div class="card_desc">
+                  <h3>- Karan lyan</h3>
+                  <p>ui/ux designer</p>
+                </div>
+              </div>
+            </div>
+            <div class="card_wrapper swiper-slide">
+              <div class="stars">
+                <i class="fa-solid fa-star" style="color: #e1da18;"></i>
+                <i class="fa-solid fa-star" style="color: #e1da18;"></i>
+                <i class="fa-solid fa-star" style="color: #e1da18;"></i>
+                <i class="fa-solid fa-star-half-stroke" style="color: #e1da18;"></i>
+                <i class="fa-regular fa-star" style="color: #e1da18;"></i>
+              </div>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi, natus.</p>
+              <hr>
+              <div class="card_content">
+                <div class="card_profile">
+                  <img src="//unsplash.it/200/200" alt="">
+                </div>
+                <div class="card_desc">
+                  <h3>- Karan lyan</h3>
+                  <p>ui/ux designer</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-pagination"></div>
+      </div>
+    </div>
+  </section>
 
   <!-- -----js file---- -->
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script src="./index.js"></script>
 </body>
 </div>
