--- a/index.html
+++ b/index.html
@@ -407,6 +407,24 @@
     </div>
   </section>
 
+  <!-- -----subscribe---- -->
+  <section class="subscribe">
+    <div class="subscribe_img">
+      <img src="//unsplash.it/2000/700" alt="">
+      <div class="subscribe_shadow"></div>
+      <div class="subscribe_title">
+        <h1>Subscribe to learn <br> more and get updates</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. <br> Quia, aliquam! Lorem ipsum, dolor sit amet
+          consectetur adipisicing elit. Recusandae, qui?</p>
+      </div>
+      <div class="subscribe_input">
+        <input type="text" placeholder="Enter Your Email"><button class="sub_btn">
+          <h3>Subscibe</h3>
+        </button>
+      </div>
+    </div>
+  </section>
+
 
 
   <!-- -----js file---- -->
