Footer Section Added\

--- a/index.html
+++ b/index.html
@@ -425,6 +425,72 @@
     </div>
   </section>
 
+  <!-- -----footer----- -->
+
+  <footer class="container">
+    <div class="footer">
+      <div class="footer_desc">
+        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, distinctio!</h3>
+      </div>
+      <div class="community">
+        <h2>Community</h2>
+        <ul>
+          <li><a href="#">
+              <h4>art</h4>
+            </a></li>
+          <li><a href="#">
+              <h4>Digital art</h4>
+            </a></li>
+          <li><a href="#">
+              <h4>Photography</h4>
+            </a></li>
+          <li><a href="#">
+              <h4>Games</h4>
+            </a></li>
+        </ul>
+      </div>
+      <div class="create_store">
+        <h2>Create Store</h2>
+        <ul>
+          <li><a href="#">
+              <h4>Create a store</h4>
+            </a></li>
+          <li><a href="#">
+              <h4>Start Selling</h4>
+            </a></li>
+          <li><a href="#">
+              <h4>My Account</h4>
+            </a></li>
+          <li><a href="#">
+              <h4>Job</h4>
+            </a></li>
+        </ul>
+      </div>
+      <div class="contact">
+        <h2>Contact</h2>
+        <ul>
+          <li><a href="#">
+              <h4>+200 54321 54</h4>
+            </a></li>
+          <li><a href="#">
+              <h4>example@gmail.com</h4>
+            </a></li>
+          <li><a href="#">
+              <h4>6235 Elgin, St. Celina, New York City.</h4>
+            </a></li>
+          <li><a href="#">
+              <h4>+200 54321 54</h4>
+            </a></li>
+        </ul>
+      </div>
+    </div>
+    <hr>
+    <div class="bottom_footer">
+      <h4>@Copyright 2023, All Right Reserved</h4>
+      <h4>Terms Privacy Policy</h4>
+    </div>
+  </footer>
+
 
 
   <!-- -----js file---- -->
