Adding responsiveness in crypto_world

--- a/index.html
+++ b/index.html
@@ -163,10 +163,9 @@
     <div class="crypto_world_img">
       <div class="crypto_world_content">
         <h2>In crypto World, We are secure & Trust Worthy</h2>
-        <p class="crypto_world_desc">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus nisi
-          eligendi possimus excepturi
-          quaerat
-          corrupti repellendus accusamus laboriosam assumenda ad?</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus nisi
+          eligendi possimus excepturi excepturi
+        </p>
         <div class="crypto_world_list">
           <div class="crypto_world_points">
             <i class="fa-solid fa-circle-check" style="color: #ffffff;">
