Making website Responsiveness

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </div>
     </div>
     <div class="banner_img">
-      <img src="//unsplash.it/400/400" alt="">
+      <img src="//source.unsplash.com/300x300/?crypto, bitcoin" alt="">
     </div>
     </div>
     <div class="banner_glow glowing_circle"></div>
@@ -83,15 +83,13 @@
 
   <section class="nexto container">
     <div class="nexto_img">
-      <img src="//unsplash.it/400/400" alt="">
+      <img src="//source.unsplash.com/300x300/?crypto, share" alt="">
     </div>
     <div class="nexto_content">
-      <h1>Nexto is the most trusted
-        Cryptocurrency platform
+      <h1>Nexto is the most trusted Crypto
       </h1>
       <p>Lorem, ipsum dolor sit Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro qui beatae ex
-        molestiae? Odit eum nesciunt sed, dicta commodi culpa. Lorem ipsum dolor sit amet consectetur adipisicing
-        elit. Perferendis provident nemo consequuntur non, ipsa in eum. Ullam dolores velit soluta.</p>
+        molestiae? Odit eum nesciunt sed,</p>
       <button class="btn">Discover More</button>
     </div>
     </div>
@@ -170,17 +168,17 @@
           <div class="crypto_world_points">
             <i class="fa-solid fa-circle-check" style="color: #ffffff;">
             </i>
-            <p>Lorem ipsum dolor sit amet.</p>
+            <p>Lorem ipsum</p>
           </div>
           <div class="crypto_world_points">
             <i class="fa-solid fa-circle-check" style="color: #ffffff;">
             </i>
-            <p>Lorem ipsum dolor sit amet.</p>
+            <p>Lorem ipsum</p>
           </div>
           <div class="crypto_world_points ">
             <i class="fa-solid fa-circle-check" style="color: #ffffff;">
             </i>
-            <p>Lorem ipsum dolor sit amet.</p>
+            <p>Lorem ipsum </p>
           </div>
         </div>
       </div>
@@ -194,7 +192,7 @@
   <!-- ---wallet steps--- -->
 
   <section class="wallet_steps container">
-    <div class="wallet_steps_img"><img src="//unsplash.it/400/400" alt=""></div>
+    <div class="wallet_steps_img"><img src="//source.unsplash.com/300x300/?crypto, steps" alt=""></div>
     <div class="wallet_steps_content">
       <h1>Easy Steps to use fugu wallet on any device</h1>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, fugiat.</p>
@@ -409,8 +407,6 @@
   <!-- -----subscribe---- -->
   <section class="subscribe">
     <div class="subscribe_img">
-      <img src="//unsplash.it/2000/700" alt="">
-      <div class="subscribe_shadow"></div>
       <div class="subscribe_title">
         <h1>Subscribe to learn <br> more and get updates</h1>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. <br> Quia, aliquam! Lorem ipsum, dolor sit amet
@@ -429,7 +425,7 @@
   <footer class="container">
     <div class="footer">
       <div class="footer_desc">
-        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, distinctio!</h3>
+        <h3>Lorem ipsum sit amet consectetur adipisicing elit. Quasi, distinctio!</h3>
       </div>
       <div class="community">
         <h2>Community</h2>
@@ -485,8 +481,8 @@
     </div>
     <hr>
     <div class="bottom_footer">
-      <h4>@Copyright 2023, All Right Reserved</h4>
-      <h4>Terms Privacy Policy</h4>
+      <h5>@Copyright 2023, All Right Reserved</h5>
+      <h5>Terms Privacy Policy</h5>
     </div>
   </footer>
 
