--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 
   <!-- -----testimonial ----- -->
 
-  <section class="testimonial container">
+  <section class="testimonial container ">
     <h1>User around the world have a great experience with nexto</h1>
     <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus, architecto.</h3>
     <div class="card swiper">
@@ -345,8 +345,8 @@
           </div>
         </div>
       </div>
-      <div class="swiper-button-next"></div>
-      <div class="swiper-button-prev"></div>
+      <!-- <div class="swiper-button-next"></div>
+      <div class="swiper-button-prev"></div> -->
       <div class="swiper-pagination"></div>
     </div>
     </div>
@@ -355,9 +355,7 @@
   <!-- ------Questions---- -->
 
   <section class="questions container">
-    <h1>Do You Have any Questions <br>
-      About Cryptocurrency? Ask US
-    </h1>
+    <h1>Do You Have any Questions</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem, eveniet.</p>
     <div class="question_accordin">
       <div class="question_wrapper">
@@ -407,15 +405,17 @@
   <!-- -----subscribe---- -->
   <section class="subscribe">
     <div class="subscribe_img">
-      <div class="subscribe_title">
-        <h1>Subscribe to learn <br> more and get updates</h1>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. <br> Quia, aliquam! Lorem ipsum, dolor sit amet
-          consectetur adipisicing elit. Recusandae, qui?</p>
-      </div>
-      <div class="subscribe_input">
-        <input type="text" placeholder="Enter Your Email"><button class="sub_btn">
-          <h3>Subscibe</h3>
-        </button>
+      <div class="subscribe_content">
+        <div class="subscribe_title">
+          <h1>Subscribe to learn <br> more and get updates</h1>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. <br> Quia, aliquam! Lorem ipsum, dolor sit amet
+            consectetur adipisicing elit. Recusandae, qui?</p>
+        </div>
+        <div class="subscribe_input">
+          <input type="text" placeholder="Enter Your Email"><button class="sub_btn">
+            <h3>Subscibe</h3>
+          </button>
+        </div>
       </div>
     </div>
   </section>
